Change height of activities container to fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1003,7 +1003,7 @@ button {
 
         .act-cont-left,
         .act-cont-right {
-            height: 1450px;
+            height: 1500px;
             width: 100%;
             font-size: 100%;
         }
